src/Grammer.jj

options
{
STATIC = false ;
}

PARSER_BEGIN(Converter)
import java.io.*;
import java.io.InputStream;
import java.util.*;
import java.nio.*;
import java.nio.charset.Charset;
public class Converter {

   public static void main(String arg[]) throws java.text.ParseException{

       try{
           String res="";
            File f = new File("input.txt");
            Scanner reader = new Scanner(f);
            while (reader.hasNextLine()) {
                String data = reader.nextLine();
                if(Converter.validate(data)){
                   res= Converter.parse(data);
                  System.out.println(res);
                }else{
                    System.out.println(false);
                }
            }
       }catch (Exception e){}
   }
     static boolean validate (String input) throws Exception{
        String result="";
        InputStream inputStream = new ByteArrayInputStream(input.getBytes(Charset.forName("UTF-8")));
        Converter obj=new Converter(inputStream);
        try {
            result = obj.Create();
            return true;
        }catch (ParseException e){

        }
        return false;
    }

    static String parse (String input) throws Exception{
                    String result="";
                    InputStream inputStream = new ByteArrayInputStream(input.getBytes(Charset.forName("UTF-8")));
                    Converter obj=new Converter(inputStream);
                    try {
                        result = obj.Create();
                        return result;
                    }catch (ParseException e){

                    }
                    return result;
        }

 }





PARSER_END(Converter)

SKIP :
{
 "\r"
| "\t"

}


TOKEN[IGNORE_CASE ] : {
  <ALPHANUMERIC : ["0"-"9"] | ["a"-"z"]| ["A"-"Z"] | "/" | ":" | "." | "_" >
  |<QUOTE: "\"">
  |<ADD : "add">
  |<#WITH: "with">
  |<WITHLINK: <WITH> " link">
  |<WITHTEXT: <WITH> " text">
  |<WITHSOURCE: <WITH> " source">
  |<WITHCOLOR: <WITH> " color">
  |<WITHFONT:  <WITH>  " font">
  |<TEXT: "text">
  |<COLOR:"color">
  |<FONT:"font">
  |<LINK:"link">
  |<PARA:"paragraph">
  |<HEAD:"heading">
  |<IMAGE:"image">
  |<SOURCE:"source">
  |<AND:"and">
  |<EOL:"\n">
  |<SPC: " ">

}


String Create():
{ String res="";}{
    <ADD>
    (<SPC>)*
    res=element() {return res;}

}

String element():
{ String tag="";
  String details="";}
{
    (details = img() {
                return "<img src=\""+details+"\" />"; }
    |details = para()   {
                 return "<p" + details + "/p>"   ;}
    |details = header() {
            return "<h1" + details + "/h1>";}
    | details = link() {
            return "<a "+details+"/a>";})
    (<SPC>)*
    (<EOL> | <EOF>)

}

String link():
{String text ;
String[] arr;
String res="";
    }
{
    <LINK>
    (<SPC>)*
text=decoratedURL() {
                                    res=text;
                                   if(text.contains("<<text>>")){
                                           arr=text.split("<<text>>");
                                           res= arr[0] + ">" + arr[1] + "<" ;
                                       }else{
                                           res= text+"><";
                                       }

                                   if(res.contains("<<href=>>")){
                                       arr=res.split("<<href=>>");
                                       res= "href=\""+arr[1]+"\""  +arr[0]+arr[2];
                              }
                                   return res;
          }
   }

String img():
{ String l;}
{
    <IMAGE>(<SPC>)*<WITHSOURCE>(<SPC>)*<QUOTE> l=sentence(){ return l;}
}

String para():
{String text ;
String[] arr;
    }
{
    <PARA>
    (<SPC>)*
    text=decoratedTxt() {
                                              //  System.out.println(text);
                                                 if(text.contains("<<text>>")){
                                                         arr=text.split("<<text>>");
                                                         return  arr[0] + ">" + arr[1] + "<" ;
                                                     }else{
                                                         return text+"><";
                                                     }
                                            }
}

String header():
{String text;
    String[] arr;}
{
    <HEAD>
    (<SPC>)*
    text=decoratedTxt(){

                    if(text.contains("<<text>>")){
                            arr=text.split("<<text>>");
                            return  arr[0] + ">" + arr[1] + "<" ;
                        }else{
                            return text+"><";
                        }
                    }
}



String sentence():
{
    Token t;
    String s="";
    String rs=null;
 }
{
    (t=<ALPHANUMERIC>|t=<SPC>) [rs = sentence()] {
                                          if (rs !=null)
                                              s = t.image + rs;
                                          else s=t.image;}
    [<QUOTE>] {
                 return s;}
}

String decoratedURL():
{String res="";
  String temp;
  String[] arr;
  String temp2;
  String[] arr2;
  String style;
}
{
    temp=minimalDecoratedURL() {res= temp;}
    (<SPC>)*
    (
                    (<AND> (<SPC>)* temp2=decoratedURL()  {
                           if(temp.contains("style=") && temp2.contains("style=")) {
                               arr=temp.split("style=\"");
                               arr2=temp2.split("style=\"");
                               style= "style=\"" + arr[1].split("\"")[0]+ " " +arr2[1].split("\"")[0] + "\"" ;
                               res = style;
                           }else if(temp.contains("style=") || temp2.contains("style=")){
                               style=(temp.contains("style=")?temp+temp2:temp2+temp);
                               res = style;
                           }else if(temp.contains("<<href=>>") || temp2.contains("<<href=>>")){
                               arr = temp.split("<<href=>>");
                               arr2=temp2.split("<<href=>>");
                               style=(temp.contains("<<href=>>")?
                               "<<href=>>"+temp.split("<<href=>>")[1]+"<<href=>>" + temp2:
                               "<<href=>>"+temp2.split("<<href=>>")[1]+"<<href=>>" + temp);
                               res = style;
                           }else {
                               //both are texts
                               arr = temp.split("<<text>>");
                               res= temp2 + arr[1] ;
                           }
                                       }
                                       )|(<EOL> | <EOF>)
                               )
                               {
                      // System.out.println(res);
                            return res;}
}



String decoratedTxt():
{String res="";
 String temp;
 String[] arr;
 String temp2;
 String[] arr2;
 String style;

 }
{
    temp=minimalDecoratedTxt() {res= temp;}
    (
    (<SPC>)*
       ( <AND> (<SPC>)* temp2=decoratedTxt()  {
                                        if(temp.contains("style=") && temp2.contains("style=")) {
                                            arr=temp.split("style=\"");
                                            arr2=temp2.split("style=\"");
                                            style= "style=\"" + arr[1].split("\"")[0]+arr2[1].split("\"")[0] +"\"";
                                            res = style;
                                        } else if(temp.contains("style=") || temp2.contains("style=")){
                                            style=(temp.contains("style=")?temp+temp2:temp2+temp);
                                            res = " " + style;
                                        }else {
                                            //both are texts
                                            arr = temp.split("<<text>>");
                                            res= temp2 + arr[1] ;
                                        }
            }
            )|(<EOL> | <EOF>)
    ){ //System.out.println(res);
 return res;}
}


String minimalDecoratedTxt():
{String temp="";}{
     temp = text(){return "<<text>>"+temp ;}
    |temp =font(){return "style=\"" + temp + "\"";}
    |temp=color(){return "style=\"" + temp + "\"";}
}


String minimalDecoratedURL():
{String temp="";}{
     temp = text(){return "<<text>>"+temp ;}
    |temp =font(){return " style=\"" + temp + "\"";}
    |temp=color(){return " style=\"" + temp + "\"";}
    |temp=url() {return "<<href=>>" + temp + "<<href=>>";}
}




String text():
{ String t;}
{
    <WITHTEXT> (<SPC>)* <QUOTE> t=sentence(){
            return t;}
}

String color():
{    String c;}
{
    <WITHCOLOR>(<SPC>)* <QUOTE> c=sentence() { return "color:" +c + ";"; }
}

String font():
{    String f; }
{
    <WITHFONT> (<SPC>)* <QUOTE> f=sentence(){ return "font-family:"+f+";";}
}

String url():
{    String l;}
{
    <WITHLINK> (<SPC>)* <QUOTE> l=sentence() {return l;}
}
